# pdm-readiness

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  update-dependencies.yml
src/pdm_readiness/: __init__.py
tests/: test_readiness.py
