[project]
name = "pdm-readiness"
version = "0.1.3"
description = "A pdm plugin to check if your project dependencies support specific Python version."
authors = [
    {name = "Andrii Kohut", email = "kogut.andriy@gmail.com"},
]
dependencies = [
    "pdm>=2.9.0",
    "requests",
]
requires-python = ">=3.9.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

readme = "README.md"
license = {text = "MIT"}

[project.entry-points.pdm]
readiness = "pdm_readiness:readiness"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
plugins = ["-e file:///${PROJECT_ROOT}"]

